fix overflow issue with CLI

--- a/assets/scss/marketing-index.scss
+++ b/assets/scss/marketing-index.scss
@@ -166,4 +166,27 @@
       // align-items: center;
     }
   }
+
+  .terminal {
+    @media only screen and (max-width: 1200px) {
+      .terminal {
+        width: 100%;
+      }
+    }
+
+    @media only screen and (min-width: 1200px) {
+      .terminal {
+        width: 750px;
+      }
+    }
+
+    height: 450px;
+    margin-bottom: 50px;
+    margin-top: 40px;
+    overflow: hidden;
+
+    #cli-demo {
+      width: 800px;
+    }
+  }
 }
