--- a/static/css/terminal.css
+++ b/static/css/terminal.css
@@ -4,22 +4,8 @@
     --color-text-subtle: #a2a2a2;
 }
 
-@media only screen and (max-width: 1200px) {
-  .terminal {
-    width: 100%;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .terminal {
-    width: 750px;
-  }
-}
 
 .terminal {
-    height: 450px;
-    margin-bottom: 40px;
-    margin-top: 40px;
     background: var(--color-bg);
     color: var(--color-text);
     box-shadow: rgba(0, 0, 0, 0.42) 5px 5px 25px;
